force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <label>Document</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>