force-app/main/default/objects/Document__c/fields/Document_Body__c.field-meta.xml
<CustomField>
    <fullName>Document_Body__c</fullName>
    <label>Document Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>