force-app/main/default/objects/Document__c/fields/Document_Content__c.field-meta.xml
<CustomField>
    <fullName>Document_Content__c</fullName>
    <label>Document Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>