force-app/main/default/objects/Document__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Document</relationshipLabel>
    <relationshipName>Document</relationshipName>
    <type>Lookup</type>
</CustomField>