force-app/main/default/objects/Document__c/fields/Token_Data__c.field-meta.xml
<CustomField>
    <fullName>Token_Data__c</fullName>
    <label>Template Token Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>